--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongoose": "^5.3.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
     "webpack": "^4.17.1",
