--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:dev": "webpack --watch",
     "build:prod": "webpack -p --env production",
-    "start": "node server.js"
+    "start": "node server.js",
+    "test": "jest"
   },
   "engines": {
     "node": "10.9.0"
@@ -14,21 +15,32 @@
   "author": "John Tillman",
   "license": "ISC",
   "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/preset-env": "^7.0.0",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
     "axios": "^0.18.0",
-    "babel-loader": "^8.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.4",
     "express": "^4.16.3",
-    "mongoose": "^5.3.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "mongoose": "^5.4.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
-    "webpack": "^4.17.1",
+    "regenerator-runtime": "^0.13.1",
+    "webpack": "^4.28.2",
     "webpack-cli": "^3.1.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    }
   }
 }
