--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build:dev": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "start": "node server.js",
+    "heroku-postbuild": "npm run build:prod",
     "test": "jest"
   },
   "engines": {
