--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build:dev": "webpack --watch",
     "build:prod": "webpack -p --env production",
     "start": "node server.js",
-    "test": "jest"
+    "test": "jest --config=jest.config.json"
   },
   "engines": {
     "node": "10.9.0"
@@ -36,7 +36,11 @@
     "webpack-cli": "^3.1.0"
   },
   "devDependencies": {
-    "jest": "^23.6.0"
+    "jest": "^23.6.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "raf": "^3.4.1"
   },
   "jest": {
     "transform": {
